--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <title>Painful — The Untiered Legend</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Favicon (optional) -->
   <link rel="icon" href="/images/painful.png" type="image/png">
 
-  <!-- Fonts & Icons -->
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@3/tsparticles.bundle.min.js"></script>
 
@@ -21,8 +20,8 @@
       margin: 0;
       padding: 0;
       font-family: 'Orbitron', sans-serif;
-      background-color: #ffffff;
-      color: #111;
+      background-color: #000;
+      color: #fff;
       overflow-x: hidden;
     }
 
@@ -42,7 +41,7 @@
       background-image: url('/images/backgrounder.jpg');
       background-size: cover;
       background-position: center;
-      filter: brightness(0.4) blur(2px);
+      filter: brightness(0.2) blur(2px);
       z-index: -1;
     }
 
@@ -51,9 +50,9 @@
       text-align: center;
       font-size: 28px;
       font-weight: bold;
-      color: #000;
-      background-color: rgba(255, 255, 255, 0.9);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      color: #fff;
+      background-color: rgba(0, 0, 0, 0.9);
+      box-shadow: 0 4px 12px rgba(255,255,255,0.05);
       position: sticky;
       top: 0;
       z-index: 10;
@@ -68,7 +67,7 @@
 
     nav a {
       text-decoration: none;
-      color: black;
+      color: #fff;
       font-size: 18px;
       padding: 8px 16px;
       border-radius: 8px;
@@ -76,9 +75,9 @@
     }
 
     nav a:hover {
-      background-color: black;
-      color: white;
-      box-shadow: 0 0 10px #000000;
+      background-color: white;
+      color: black;
+      box-shadow: 0 0 10px white;
     }
 
     .content {
@@ -97,15 +96,15 @@
       width: 100%;
       max-width: 300px;
       border-radius: 20px;
-      box-shadow: 0 0 25px rgba(0,0,0,0.3);
+      box-shadow: 0 0 25px rgba(255,255,255,0.3);
     }
 
     .tab-section {
       flex: 3;
-      background-color: rgba(255, 255, 255, 0.92);
+      background-color: rgba(0, 0, 0, 0.85);
       padding: 40px;
       border-radius: 20px;
-      box-shadow: 0 0 25px rgba(0,0,0,0.15);
+      box-shadow: 0 0 25px rgba(255,255,255,0.1);
       transition: opacity 0.4s ease;
       animation: fadeIn 1s ease;
     }
@@ -113,12 +112,15 @@
     .tab-section h2 {
       font-size: 30px;
       margin-bottom: 20px;
+      color: #fff;
+      text-shadow: 0 0 10px rgba(255,255,255,0.3);
     }
 
     .tab-section p {
       font-size: 17px;
       line-height: 1.7;
       white-space: pre-line;
+      color: #f1f1f1;
     }
 
     .hidden {
@@ -212,7 +214,7 @@ we see the light.
     particles: {
       number: { value: 60 },
       size: { value: 2 },
-      color: { value: "#000000" },
+      color: { value: "#ffffff" },
       opacity: { value: 0.3 },
       move: {
         enable: true,
@@ -223,8 +225,8 @@ we see the light.
       links: {
         enable: true,
         distance: 120,
-        color: "#000000",
-        opacity: 0.25
+        color: "#ffffff",
+        opacity: 0.2
       }
     },
     background: { color: "transparent" }
