--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Painful — The Untiered Legend</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="/images/painful.png" type="image/png">
+  <link rel="icon" href="images/painful.png" type="image/png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
       left: 0;
       height: 100%;
       width: 100%;
-      background-image: url('/images/backgrounder.jpg');
+      background-image: url('images/backgrounder.jpg');
       background-size: cover;
       background-position: center;
       filter: brightness(0.2) blur(2px);
@@ -165,7 +165,7 @@
 
 <div class="content">
   <div class="left-image">
-    <img src="/images/painful.png" alt="Painful">
+    <img src="images/painful.png" alt="Painful">
   </div>
 
   <div class="tab-section" id="lore">
